--- a/assets/css/responsive480x760.css
+++ b/assets/css/responsive480x760.css
@@ -309,11 +309,12 @@
 
 .diagnostico{
   color:#616668;
-  font-family: 'Releway'; 
+  font-family: 'Releway';
   font-weight: 600;
-  height: 100px;
-  font-size: 20px;
+  height: auto;
+  font-size: 16px;
   padding-top: 20px;
+  padding-bottom: 14px;
 }
 
 .texto-ConsultoriaTres {
